--- a/client/app/composants/relations/relationsDiv.html
+++ b/client/app/composants/relations/relationsDiv.html
@@ -22,7 +22,7 @@
       <p>Mes groupes d'amis</p>
       <input ng-model="chercheGroupe"/>
       <div ng-repeat="groupe in groupes | filter:chercheGroupe ">
-        {{groupe.nom}}
+        {{groupe.NomGroupe}}
       </div>
     </div>
 
