obligé de commiter

--- a/client/app/composants/transaction/id/transactionDiv.html
+++ b/client/app/composants/transaction/id/transactionDiv.html
@@ -5,9 +5,9 @@
   	<h1> Régler une Transaction</h1>
   	<br/><br/>
   	<p> Vous souhaitez payer la transaction: "{{transaction.description}}" </p>
-  	<p> créée par : "{{transaction.UtilisateurCreateur.nom}}"</p>
+  	<p> créée par : "{{transaction.createur}}"</p>
   	<p> le: "{{transaction.DateCreation}}" </p>
-  	<p> Le Total de cette transaction est de: {{transaction.MontantTotal}} </p>
+  	<p> Le Total de cette transaction est de: {{transaction.montant}} </p>
   	<p> La somme à payer est de: {{montantDu}}</p>
 
     <br/><br/>
