--- a/client/app/composants/tableauDeDette/tableauDeDette.html
+++ b/client/app/composants/tableauDeDette/tableauDeDette.html
@@ -11,7 +11,7 @@
   <div class="col-md-6">
    <div class='transaction' ng-repeat="transaction in transactionsParticipant">
       <div ng-repeat="participant in transaction.participants" ng-if="participant.participant.mel == mel && participant.statut == 'Ouverte'"> 
-       Vous devez {{participant.montantDu}} à {{transaction.preteur.nom}} pour {{transaction.description}}
+       Vous devez {{participant.montantDu}} à {{transaction.preteur.mel}} pour {{transaction.description}}
        <button class='btn btn-primary'ng-click="dirigerVers(transaction._id)"> Régler  </button>
       </div>
     </div>
