--- a/client/app/composants/tableauDeDette/tableauDeDette.html
+++ b/client/app/composants/tableauDeDette/tableauDeDette.html
@@ -2,7 +2,7 @@
   <h1>
   	Transactions en Cours 
   </h1>
-  <h4> Votre solde: {{solde}}</h4>
+  <h4> Voues devez: {{solde}}</h4>
 
   <button class='btn btn-primary' ng-click="ajouterTransaction()"> Ajouter une Transaction </button>
   <h3>
