--- a/client/app/composants/transaction/id/transactionDiv.html
+++ b/client/app/composants/transaction/id/transactionDiv.html
@@ -1,5 +1,5 @@
 
-<div ng-controller="TransactionIdControleur" class="col-md-6 transactionId">
+<div ng-controller="TransactionIdControleur" class="col-md-6 transactionId tableauDeDette">
   <table class='table transaction table-striped'>
   <div>
   	<h1> Régler une Transaction</h1>
