--- a/client/app/composants/relations/relationsDiv.html
+++ b/client/app/composants/relations/relationsDiv.html
@@ -11,8 +11,8 @@
     <div class="col-md-6">
       <p>Mes amis</p>
       <input ng-model="chercheAmi"/>
-      <div ng-repeat="ami in amis | filter: chercheAmi">
-        <div ng-repeat=" a in ami.amis | filter: chercheAmi" >
+      <div ng-repeat="ami in amis">
+        <div ng-repeat=" a in ami.amis | orderBy: 'nom' | filter: chercheAmi" >
            {{a.nom}}
         </div>
       </div>
@@ -21,7 +21,7 @@
     <div class="col-md-6">
       <p>Mes groupes d'amis</p>
       <input ng-model="chercheGroupe"/>
-      <div ng-repeat="groupe in groupes | filter:chercheGroupe ">
+      <div ng-repeat="groupe in groupes | orderBy: 'NomGroupe' | filter:chercheGroupe ">
         {{groupe.NomGroupe}}
       </div>
     </div>
