Transactions s'affichent correctement

--- a/client/app/composants/tableauDeDette/tableauDeDette.html
+++ b/client/app/composants/tableauDeDette/tableauDeDette.html
@@ -16,7 +16,7 @@
       Vos dettes
     </h3>
     <div class='transaction' ng-repeat="transaction in transactionsParticipant">
-      <div ng-repeat="participant in transaction.participants" ng-if="participant.participant.mel == mel && participant.statut == 'Ouverte'"> 
+      <div ng-repeat="participant in transaction.participants" ng-if="participant.participant.mel == mel && participant.statut == 'Ouverte' && participant.montantDu != 0"> 
        Vous devez {{participant.montantDu}} à {{transaction.preteur.mel}} pour {{transaction.description}}
        <button class='btn btn-primary'ng-click="dirigerVers(transaction._id)"> Régler  </button>
       </div>
