--- a/client/app/composants/touteActivite/touteActivite.html
+++ b/client/app/composants/touteActivite/touteActivite.html
@@ -9,7 +9,7 @@
   </tr>
 
   <tr ng-repeat="element in toutesActivites">
-    <th> {{element.texte}} </th>
+    <th> {{element.message}} </th>
     <th> {{element.date}} </th>
   </tr>
   </table>
