CSS, Affichage, DateCreation d'une Transaction

--- a/client/app/composants/reception/reception.html
+++ b/client/app/composants/reception/reception.html
@@ -1,2 +1,5 @@
 <navbar-login></navbar-login>
-<h1> PAGE DE RECEPTION </h1>
+<div class='reception'>
+  <h1> Bienvenue à Splitwise ! </h1>
+  <p> Gérez vos dettes.  Gérez votre vie.  </p>
+</div>
