--- a/client/app/composants/relations/relationsDiv.html
+++ b/client/app/composants/relations/relationsDiv.html
@@ -3,8 +3,8 @@
     Relations
   </h1>
   
-  <button class='btn btn-primary' ng-click="ajouterAmis()"> Ajouter un Ami </button> 
-  <button class='btn btn-primary' ng-click="ajouterGroupe()"> Ajouter un Groupe </button> <br/><br/>
+  <button class='btn btn-primary' ng-click="ajouterAmis()"> Trouver des Ami </button> 
+  <button class='btn btn-primary' ng-click="ajouterGroupe()"> Créer un Groupe </button> <br/><br/>
 
   <div class="col-md-12">
     
