--- a/client/app/composants/touteActivite/touteActivite.html
+++ b/client/app/composants/touteActivite/touteActivite.html
@@ -1,8 +1,9 @@
 <div ng-controller="TouteActiviteControleur" class="col-md-6 tableauDeDette">
-  <table class='table table-bordered table-striped'>
+  <table class='table table-bordered table-striped historique'>
   <h1>
     Historique
   </h1>
+  <p> Si un évènement vous concerne, il sera affiché ici. </p>
   <tr>
     <th> Evènement </th>
     <th> Date </th>
