--- a/client/app/partages/navbarVide/navbarVide.html
+++ b/client/app/partages/navbarVide/navbarVide.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#/">Splitwise</a>
+      <a class="navbar-brand" href="#/tableauDeBord">Splitwise</a>
     </div>
   </div>
 </nav>
