--- a/client/app/partages/navbarConnecte/navbarConnecte.html
+++ b/client/app/partages/navbarConnecte/navbarConnecte.html
@@ -1,7 +1,7 @@
 <nav ng-controller="NavbarConnecteControleur" class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/">Splitwise</a>
+      <a class="navbar-brand" href="#/tableauDeBord">Splitwise</a>
     </div>
     <div class="navbar-form navbar-right">
       <button ng-click="deconnecter()"class="btn btn-success">Deconnexion</button>
