--- a/client/app/partages/sidebarNavigation/sidebarNavigation.html
+++ b/client/app/partages/sidebarNavigation/sidebarNavigation.html
@@ -12,7 +12,7 @@
     </div>
     <div class="navbar-collapse collapse sidebar-navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a ng-click="dirigerVersURL('/tableauDeBord')"> Tableau de Bord</a></li>
+        <li><a ng-click="dirigerVersURL('/tableauDeBord')"> Tableau de Bord</a></li>
         <li><a ng-click="dirigerVersURL('/relations')">Amis et Groupes </a></li>
         <li><a ng-click="dirigerVersURL('/historique')">Toute Activité</a></li>
       </ul>
