--- a/client/app/composants/amis/ajouterAmis.html
+++ b/client/app/composants/amis/ajouterAmis.html
@@ -1,4 +1,4 @@
-<div ng-controller="AjouterAmisControleur" class="col-md-6 AjouterAMis">
+<div ng-controller="AjouterAmisControleur" class="col-md-6 tableauDeDette">
   <table class='table ajouerAmis table-striped'>
 
     <h2>Ajouter un Ami</h2>
